--- a/Web/src/app/pages/home/home.component.html
+++ b/Web/src/app/pages/home/home.component.html
@@ -1,2 +1,2 @@
-<h1 class="mt-5">Hello World!</h1>
-<p class="lead">My first angular SPA.</p>
+<app-filters />
+<app-table category="{{category}}" state="{{state}}"/>
