--- a/Web/src/app/components/table/table.component.html
+++ b/Web/src/app/components/table/table.component.html
@@ -9,7 +9,7 @@
         </tr>
       </thead>
       <tbody>
-        @for (task of tasks; track task.id; let idx=$index) {
+        @for (task of tasks$ | async ; track task.id; let idx=$index) {
         <tr>
           <td>{{ task.description }}</td>
           <td>{{ task.status }}</td>
